--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "firebase": "^10.2.0",
-    "luxon": "^3.4.0"
+    "luxon": "^3.4.0",
+    "nanoid": "^4.0.2"
   }
 }
