--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "firebase": "^10.2.0",
     "luxon": "^3.4.0",
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "octokit": "^3.1.1"
   }
 }
